--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.security.oauth2.client.registration.github.scope=read:user
 spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
 spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+spring.security.oauth2.client.provider.github.user-name-attribute-name=email
 
 spring.security.oauth2.client.registration.google.provider=google
 spring.security.oauth2.client.registration.google.client-id=88951150265-q7aq5urrim4rrtqo62hc96o6r5v7r34c.apps.googleusercontent.com
@@ -17,3 +18,4 @@ spring.security.oauth2.client.registration.google.scope=https://www.googleapis.c
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://accounts.google.com/o/oauth2/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v1/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute-name=email
